# yrl-feed-parser

./: .gitignore  CMakeLists.txt  README.md  build.sh  config_example  main.cpp  postinst.in  prerm.in
3pp/lib/: libbsoncxx.so.3.0.1-rc0-pre  libbsoncxx.so._noabi  libmongoc-1.0.la  libmongoc-1.0.so.0.0.0  libmongoc-priv.so.0.0.0  libmongocxx.so.3.0.1-rc0-pre  libmongocxx.so._noabi
3pp/lib/cmake/libbsoncxx-3.0.1-rc0-pre/: libbsoncxx-config.cmake
3pp/lib/cmake/libmongocxx-3.0.1-rc0-pre/: libmongocxx-config.cmake
3pp/lib/pkgconfig/: libbson-1.0.pc  libmongoc-ssl-1.0.pc
app/: CMakeLists.txt  main.cpp
cmake/: FindLibXML++.cmake
feed/: CMakeLists.txt  bson.cpp  bson.h  feed.cpp  feed.h  feed_parser.cpp  feed_parser.h  offer_node.cpp  offer_node.h  offer_parser.cpp  offer_parser.h  offer_tree.cpp  offer_tree.h  parser.cpp  parser.h
feed/3pp/lib/: libbson-1.0.la  libbson-1.0.so.0.0.0  libmongoc-priv.la
feed/3pp/lib/cmake/libbsoncxx-3.0.1-rc0-pre/: libbsoncxx-config-version.cmake
feed/3pp/lib/pkgconfig/: libbsoncxx.pc  libmongoc-1.0.pc  libmongoc-priv.pc  libmongocxx.pc
feed/unittests/: test.xml  test_feed_parser.cpp
